厨师兼容，优化进度，初步整机械动力村民