@@ -8,6 +8,7 @@ import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 
@@ -19,31 +20,31 @@ public class ArmorGachaSystem {
     private static final double RATE_INCREMENT_5STAR = 0.06; // 6% per pull after 73
 
     private static final Random random = new Random();
-    public static final List<ItemStack> STAR3_LIST = new ArrayList<>();
-    public static final List<ItemStack> STAR4_LIST = new ArrayList<>();
-    public static final List<ItemStack> STAR5_LIST = new ArrayList<>();
+    public static List<ItemStack> STAR3_LIST = new ArrayList<>();
+    public static List<ItemStack> STAR4_LIST = new ArrayList<>();
+    public static List<ItemStack> STAR5_LIST = new ArrayList<>();
 
     /**
      * 五星：hero | dark_cover | spark_of_dawn | gilded_hunt
      * 四星：golden_execution | lady Evening | old knight | eclipse | dragon_slayer | chess_board |dark_load | sunset_wings
      */
     public static void initItemList() {
-        STAR3_LIST.addAll(List.of(Items.GOLDEN_HELMET.getDefaultInstance(), Items.GOLDEN_CHESTPLATE.getDefaultInstance(), Items.GOLDEN_LEGGINGS.getDefaultInstance(), Items.GOLDEN_BOOTS.getDefaultInstance(),
+        STAR3_LIST = Arrays.asList(Items.GOLDEN_HELMET.getDefaultInstance(), Items.GOLDEN_CHESTPLATE.getDefaultInstance(), Items.GOLDEN_LEGGINGS.getDefaultInstance(), Items.GOLDEN_BOOTS.getDefaultInstance(),
                 Items.DIAMOND_HELMET.getDefaultInstance(), Items.DIAMOND_CHESTPLATE.getDefaultInstance(), Items.DIAMOND_LEGGINGS.getDefaultInstance(), Items.DIAMOND_BOOTS.getDefaultInstance(),
                 Items.NETHERITE_HELMET.getDefaultInstance(), Items.NETHERITE_CHESTPLATE.getDefaultInstance(), Items.NETHERITE_LEGGINGS.getDefaultInstance(), Items.NETHERITE_BOOTS.getDefaultInstance(),
-                Items.IRON_HELMET.getDefaultInstance(), Items.IRON_CHESTPLATE.getDefaultInstance(), Items.IRON_LEGGINGS.getDefaultInstance(), Items.IRON_BOOTS.getDefaultInstance()));
+                Items.IRON_HELMET.getDefaultInstance(), Items.IRON_CHESTPLATE.getDefaultInstance(), Items.IRON_LEGGINGS.getDefaultInstance(), Items.IRON_BOOTS.getDefaultInstance());
 
-        STAR4_LIST.addAll(List.of(FAItems.LADY_MARIA_HELMET.get().getDefaultInstance(), FAItems.LADY_MARIA_CHESTPLATE.get().getDefaultInstance(), FAItems.LADY_MARIA_LEGGINGS.get().getDefaultInstance(), FAItems.LADY_MARIA_BOOTS.get().getDefaultInstance(),
+        STAR4_LIST = List.of(FAItems.LADY_MARIA_HELMET.get().getDefaultInstance(), FAItems.LADY_MARIA_CHESTPLATE.get().getDefaultInstance(), FAItems.LADY_MARIA_LEGGINGS.get().getDefaultInstance(), FAItems.LADY_MARIA_BOOTS.get().getDefaultInstance(),
                 FAItems.GOLDEN_EXECUTION_HELMET.get().getDefaultInstance(), FAItems.GOLDEN_EXECUTION_CHESTPLATE.get().getDefaultInstance(), FAItems.GOLDEN_EXECUTION_LEGGINGS.get().getDefaultInstance(), FAItems.GOLDEN_EXECUTION_BOOTS.get().getDefaultInstance(),
                 FAItems.ECLIPSE_SOLDIER_HELMET.get().getDefaultInstance(), FAItems.ECLIPSE_SOLDIER_CHESTPLATE.get().getDefaultInstance(), FAItems.ECLIPSE_SOLDIER_LEGGINGS.get().getDefaultInstance(), FAItems.ECLIPSE_SOLDIER_BOOTS.get().getDefaultInstance(),
                 FAItems.DRAGONSLAYER_HELMET.get().getDefaultInstance(), FAItems.DRAGONSLAYER_CHESTPLATE.get().getDefaultInstance(), FAItems.DRAGONSLAYER_LEGGINGS.get().getDefaultInstance(), FAItems.DRAGONSLAYER_BOOTS.get().getDefaultInstance(),
                 FAItems.CHESS_BOARD_KNIGHT_HELMET.get().getDefaultInstance(), FAItems.CHESS_BOARD_KNIGHT_CHESTPLATE.get().getDefaultInstance(), FAItems.CHESS_BOARD_KNIGHT_LEGGINGS.get().getDefaultInstance(), FAItems.CHESS_BOARD_KNIGHT_BOOTS.get().getDefaultInstance(),
-                FAItems.SUNSET_WINGS_HELMET.get().getDefaultInstance(), FAItems.SUNSET_WINGS_CHESTPLATE.get().getDefaultInstance(), FAItems.SUNSET_WINGS_LEGGINGS.get().getDefaultInstance(), FAItems.SUNSET_WINGS_BOOTS.get().getDefaultInstance()));
+                FAItems.SUNSET_WINGS_HELMET.get().getDefaultInstance(), FAItems.SUNSET_WINGS_CHESTPLATE.get().getDefaultInstance(), FAItems.SUNSET_WINGS_LEGGINGS.get().getDefaultInstance(), FAItems.SUNSET_WINGS_BOOTS.get().getDefaultInstance());
 
-        STAR5_LIST.addAll(List.of(FAItems.HERO_HELMET.get().getDefaultInstance(), FAItems.HERO_CHESTPLATE.get().getDefaultInstance(), FAItems.HERO_LEGGINGS.get().getDefaultInstance(), FAItems.HERO_BOOTS.get().getDefaultInstance(),
+        STAR5_LIST = List.of(FAItems.HERO_HELMET.get().getDefaultInstance(), FAItems.HERO_CHESTPLATE.get().getDefaultInstance(), FAItems.HERO_LEGGINGS.get().getDefaultInstance(), FAItems.HERO_BOOTS.get().getDefaultInstance(),
                 FAItems.DARK_COVER_HELMET.get().getDefaultInstance(), FAItems.DARK_COVER_CHESTPLATE.get().getDefaultInstance(), FAItems.DARK_COVER_LEGGINGS.get().getDefaultInstance(), FAItems.DARK_COVER_BOOTS.get().getDefaultInstance(),
                 FAItems.SPARK_OF_DAWN_HELMET.get().getDefaultInstance(), FAItems.SPARK_OF_DAWN_CHESTPLATE.get().getDefaultInstance(), FAItems.SPARK_OF_DAWN_LEGGINGS.get().getDefaultInstance(), FAItems.SPARK_OF_DAWN_BOOTS.get().getDefaultInstance(),
-                FAItems.GILDED_HUNT_HELMET.get().getDefaultInstance(), FAItems.GILDED_HUNT_CHESTPLATE.get().getDefaultInstance(), FAItems.GILDED_HUNT_LEGGINGS.get().getDefaultInstance(), FAItems.GILDED_HUNT_BOOTS.get().getDefaultInstance()));
+                FAItems.GILDED_HUNT_HELMET.get().getDefaultInstance(), FAItems.GILDED_HUNT_CHESTPLATE.get().getDefaultInstance(), FAItems.GILDED_HUNT_LEGGINGS.get().getDefaultInstance(), FAItems.GILDED_HUNT_BOOTS.get().getDefaultInstance());
 
     }
 
